--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
   "version": 2,
-  "buildCommand": "cd frontend && npm install && npm run build",
-  "outputDirectory": "frontend/.next",
-  "installCommand": "cd frontend && npm install --legacy-peer-deps",
-  "framework": null,
-  "regions": ["iad1"],
-  "functions": {
-    "frontend/app/**/*.{js,ts,tsx}": {
-      "maxDuration": 10
+  "builds": [
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/next"
     }
-  }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "frontend/$1"
+    }
+  ]
 }
