🔧 Fix Vercel: Configuration correcte outputDirectory et framework

--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "sintra-ai-monorepo",
+  "name": "sintra-ai",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "build": "cd frontend && npm install && npm run build",
     "start": "cd frontend && npm start",
     "dev": "cd frontend && npm run dev"
-  },
-  "workspaces": [
-    "frontend"
-  ]
+  }
 }
-
