--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: sintra-ai-backend
     env: python
-    buildCommand: pip install -r requirements_simple.txt
-    startCommand: python main_simple.py
+    buildCommand: pip install -r requirements.txt
+    startCommand: python app.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.18
